--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,3 @@
-bcrypt==3.1.7
-blinker==1.4
-cachetools==5.2.0
-certifi==2019.11.28
-chardet==3.0.4
-click==8.1.3
-colorama==0.4.3
-cryptography==2.8
-distro==1.4.0
-entrypoints==0.3
-fasteners==0.14.1
-Flask==2.1.2
-future==0.18.2
-google-auth==2.9.0
-google-auth-oauthlib==0.5.2
 gspread==5.4.0
-gunicorn==20.1.0
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==4.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-keyring==18.0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==2.1.1
-monotonic==1.5
-netifaces==0.10.4
-oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-pkg==0.2
-protobuf==3.6.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-python-dateutil==2.7.3
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-rsa==4.8
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-systemd-python==234
-urllib3==1.25.8
-wadllib==1.3.3
-Werkzeug==2.1.2
-zipp==3.8.0
+protobuf==4.21.2
+PySimpleGUI==4.60.1
