install All package json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install:all": "yarn && pip install -r requirements.txt"
+
   },
   "repository": {
     "type": "git",
@@ -20,4 +22,5 @@
     "node-pty": "^0.10.1",
     "total4": "^0.0.45"
   }
+  
 }
