--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setup": " pip install -r requirements.txt && yarn" 
+    "setup": "python -m venv venv && .venv/bin/activate && pip install -r requirements.txt && yarn"
+
   },
   "repository": {
     "type": "git",
